--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,18 @@ body {
   *:after {
     box-sizing: inherit;
   }
+
+  .btn-primary {
+    background-color: rgb(97, 112, 253);
+  }
+
+  .btn-danger {
+    background-color: rgb(241, 80, 80);
+  }
+
+  .btn-warning {
+    background-color: rgb(149, 150, 137);
+  }
   
   .App {
     width: 90%;
